# ChangeLog for games-engines/onscripter-en
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*onscripter-en-20110413 (14 Apr 2011)

  14 Apr 2011; Michał Ziąbkowski <mziab@o2.pl>
  +onscripter-en-20110413.ebuild:
  Bumped.

*onscripter-en-20110404 (05 Apr 2011)

  05 Apr 2011; Michał Ziąbkowski <mziab@o2.pl>
  +onscripter-en-20110404.ebuild:
  Bumped.

*onscripter-en-20110331 (01 Apr 2011)

  01 Apr 2011; Michał Ziąbkowski <mziab@o2.pl>
  -onscripter-en-20100518.ebuild, -onscripter-en-20100915.ebuild,
  -onscripter-en-20101010.ebuild, -onscripter-en-20110305.ebuild,
  +onscripter-en-20110331.ebuild:
  Bumped. Removed cruft.

*onscripter-en-20110321 (27 Mar 2011)

  27 Mar 2011; Michał Ziąbkowski <mziab@o2.pl>
  +onscripter-en-20110321.ebuild:
  Bumped.

*onscripter-en-20110314 (15 Mar 2011)

  15 Mar 2011; Michał Ziąbkowski <mziab@o2.pl>
  -files/onscripter-en-20091215-cxxflags.patch, onscripter-en-20100518.ebuild,
  onscripter-en-20100915.ebuild, onscripter-en-20101010.ebuild,
  onscripter-en-20110305.ebuild, +onscripter-en-20110314.ebuild,
  +files/onscripter-en-20110314-compiler.patch, -files/compiler-fix.patch,
  -files/configure-fix.patch, -files/cxxflags.patch, -files/gcc44.patch:
  Bumped with new patch. Some clean up in various places.

*onscripter-en-20110305 (06 Mar 2011)

  06 Mar 2011; Michał Ziąbkowski <mziab@o2.pl>
  +onscripter-en-20110305.ebuild:
  Bumped.

*onscripter-en-20101010 (13 Oct 2010)

  13 Oct 2010; Michał Ziąbkowski <mziab@o2.pl>
  -onscripter-en-20100221.ebuild, -onscripter-en-20100307.ebuild,
  -onscripter-en-20100309.ebuild, +onscripter-en-20101010.ebuild:
  Bumped. Cleaned out some cruft.

*onscripter-en-20100915 (19 Sep 2010)

  19 Sep 2010; Michał Ziąbkowski <mziab@o2.pl>
  +onscripter-en-20100915.ebuild:
  Bumped.

*onscripter-en-20100518 (23 May 2010)

  23 May 2010; Michał Ziąbkowski <mziab@o2.pl>
  +onscripter-en-20100518.ebuild:
  Bumped.

*onscripter-en-20100309 (11 Mar 2010)
