@@ -4,11 +4,13 @@ DIST onscripter-en-20110314-src.tar.bz2 923004 RMD160 5d199e01c289eb172d13f24e73
 DIST onscripter-en-20110321-src.tar.bz2 924407 RMD160 529a695d6348d317e157fce111da67a5207d7b64 SHA1 1c530be082d26a00877715b175fc86a9a32da749 SHA256 ad454cc6be39206542d08a867256468ea434918f3e89f8d5bf78a0f87a2347e3
 DIST onscripter-en-20110331-src.tar.bz2 925773 RMD160 ec5dcefda7c3467423dab5cb0275c97ab07d3594 SHA1 65da8562fbdfe5f34cfb0a91e93fad9013988908 SHA256 2f2c1032629bdbd5a5bab6a5999e481b810ad6a1cecf4be13bf038673657eb30
 DIST onscripter-en-20110404-src.tar.bz2 926030 RMD160 0284ba75950ab9499994b8c6ea917a9b6c6020b1 SHA1 0158855f20f12fee9eab95df409c171b108a62ab SHA256 8c179d8336fdbd17883285d6cf78070e4e2361c4783de2eb4ec924f1c842f4e2
-DIST onscripter-en-20110413-src.tar.bz2 926599 RMD160 e572c8b44d0140862a0778cb501e304762feb704 SHA1 54d8ae431a674c9233d510077d4fb16966f6368a SHA256 151deb765ffc13ef492f28cb2e103d98bd9a96795f5a96a81f25539408baf135
+DIST onscripter-en-20110413-src.tar.bz2 923804 RMD160 e95dbb926ce5fb521c1660d3f797fb68a2eedcbc SHA1 b3659ba701f0b6ebb65b1a0d8b89fc3d2b6ec461 SHA256 81a76bc32b926014f48fae6072ed05c2e5f468dc2545afaba90ae68bfcfd085d
+DIST onscripter-en-20110628-src.tar.bz2 979818 RMD160 9b0181f69ff5e7aa8bdf53a6277789528090526b SHA1 7ebdc3632b789982e7f9281e6ad5f08f9655cfb7 SHA256 df6c3fa83cf51fd35433bd3049a2d069fc3a3405b1254e1ad68a9319a2b0f482
 EBUILD onscripter-en-20110314.ebuild 873 RMD160 566c22b7e3308474e25a7e5586344b9a6c0eb43b SHA1 bc894ac3f1e38f354b92fe422a1fb4b3f206c833 SHA256 6fed102635c73bf21b0b78a42e73f3f068fd6ae4fadc4dd258d5c3aa778c92cd
 EBUILD onscripter-en-20110321.ebuild 883 RMD160 d2d68d922814691fcc6aefa657841ce8522dd0a1 SHA1 90ea59ad92f4ef77d64c44f946c01db152e91c17 SHA256 85148a5267715a479ad8c69150646a3f8ef6e50ec7ba57e96cd22c8cf74ea55e
 EBUILD onscripter-en-20110331.ebuild 883 RMD160 d2d68d922814691fcc6aefa657841ce8522dd0a1 SHA1 90ea59ad92f4ef77d64c44f946c01db152e91c17 SHA256 85148a5267715a479ad8c69150646a3f8ef6e50ec7ba57e96cd22c8cf74ea55e
 EBUILD onscripter-en-20110404.ebuild 883 RMD160 d2d68d922814691fcc6aefa657841ce8522dd0a1 SHA1 90ea59ad92f4ef77d64c44f946c01db152e91c17 SHA256 85148a5267715a479ad8c69150646a3f8ef6e50ec7ba57e96cd22c8cf74ea55e
 EBUILD onscripter-en-20110413.ebuild 883 RMD160 d2d68d922814691fcc6aefa657841ce8522dd0a1 SHA1 90ea59ad92f4ef77d64c44f946c01db152e91c17 SHA256 85148a5267715a479ad8c69150646a3f8ef6e50ec7ba57e96cd22c8cf74ea55e
-MISC ChangeLog 4907 RMD160 c7abe305f8f3e716da1c3ddb87314b8fede40739 SHA1 4a7885f5c4cbb802492d3dc5022b79387fe800b0 SHA256 8e5d32761e319ca6a9eaed0d647a668dd036f4f18611bb5ba8c2975797565a30
+EBUILD onscripter-en-20110628.ebuild 908 RMD160 01f548b9f63b1abccfd4c3f0c28224326d5d201b SHA1 0b2b1080bb27dd18647f650168067b71e9b47f56 SHA256 a69957b4c9fd5217e32cd9661e4aeccb0b1c9745d01952afedb76c6c8df3083d
+MISC ChangeLog 5040 RMD160 2f1fc05dec46e316437f240c9a5f58e0034b4229 SHA1 1481b8b9c582a045035c288e1168a87b2a342ff9 SHA256 733b6086a70d3c961ece09846e07df3557d5910380ad9ce5b3accea3d8d24213
 MISC metadata.xml 322 RMD160 ae392e7983f4f4d718e919c9d6e42a90d626f770 SHA1 25298823cab9b1a65fd253e1eaf821f2ee1b8148 SHA256 7a1a4d7e2ddfb9cdbda7afab27c0a24e70f150b73ae99565acaf6f656d15a7fe
