@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*onscripter-en-20110628 (04 Jul 2011)
+
+  04 Jul 2011; Michał Ziąbkowski <mziab@o2.pl>
+  +onscripter-en-20110628.ebuild:
+  Bumped.
+
 *onscripter-en-20110413 (14 Apr 2011)
 
   14 Apr 2011; Michał Ziąbkowski <mziab@o2.pl>
